tests/compile_fail/label_invalid_name.rs
skuld::new_label!(pub BAD, "bad-name");

fn main() {}
